--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8% 4%;
+  padding: 30px 4%;
   background: #FFF;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
   margin-bottom: 24px;
@@ -31,7 +31,7 @@ header div{
   cursor: pointer;
 }
 
-.light-mode{
+/* .light-mode{
   background-color: white;
   color: black;
 }
@@ -40,7 +40,7 @@ header div{
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
   color: white;
   
-}
+} */
 .dark-mode-body{
   background-color: #202C36;
   color: white;
@@ -48,6 +48,12 @@ header div{
 .dark-mode-body{
   .container{
     background-color: #202C36;
+  }
+  .dark-mode{
+    background-color: #2B3844;
+  }
+  .fillter-hover{
+    background-color: #2B3844;
   }
   .flags-div{
     background-color: #2B3844;
@@ -133,6 +139,7 @@ header div{
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.5s ease, visibility 0s linear 0.5s;
+  background-color: white;
 }
 .fillter-hover.show {
   opacity: 1;
@@ -266,4 +273,43 @@ header div{
   flex-wrap: wrap;
   gap: 8px;
   padding-bottom: 40px;
+}
+@media(width>=1024px){
+  .input-div{
+    padding: 0 8%;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .container{
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 0 8%;
+    gap: 75px;
+  }
+  .about-main-container{
+    display: flex;
+    flex-direction: column;
+  }
+  .first-text-about{
+    display: flex;
+    align-items: center;
+    gap: 141px;
+  }
+  .info-contant{
+    gap: 120px;
+    flex-direction: row;
+    align-items: center;
+  }
+  .therd-text{
+    display: flex;
+    flex-direction: column
+    ;
+  }
+  .border{
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
+  }
 }
