--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,10 @@ header div{
     background-color: #2B3844;
     color: white;
   }
+  .continent-div{
+    background-color: #2B3844;
+    color: white;
+  }
 }
 .container{
   width: 320px;
@@ -86,7 +90,6 @@ header div{
   flex-direction: column;
   gap: 40px;
   padding-bottom: 40px;
-  margin-top: -80px;
 }
 .input-div{
   display: flex;
@@ -274,6 +277,16 @@ header div{
   gap: 8px;
   padding-bottom: 40px;
 }
+#continet-div{
+  width: 320px;
+}
+.flags-container{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 320px;
+  margin-top: -80px;
+}
 @media(width>=1024px){
   .input-div{
     padding: 0 8%;
@@ -291,6 +304,7 @@ header div{
   .about-main-container{
     display: flex;
     flex-direction: column;
+    padding: 0 8%;
   }
   .first-text-about{
     display: flex;
@@ -311,5 +325,11 @@ header div{
     display: flex;
     gap: 20px;
     margin-top: 30px;
+  }
+  .flags-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
