--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body{
   width: 100%;
   height: 100vh;
   background: #FAFAFA;
+  overflow-x: hidden;
   
 }
 header{
@@ -285,8 +286,20 @@ header div{
   flex-direction: column;
   gap: 40px;
   width: 320px;
-  margin-top: -80px;
+  position: absolute;
+  top: 420px;
+  display: block;
 }
+/* .flags-container-none{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 320px;
+  position: absolute;
+  top: 420px;
+  display: none;
+} */
+
 @media(width>=1024px){
   .input-div{
     padding: 0 8%;
